# elden-ring-dyes

./: CMakeLists.txt  LICENSE.txt  README.md  erdyes.ini  out.txt
src/: dllmain.cpp  erdyes_apply_colors.cpp  erdyes_apply_colors.hpp  erdyes_apply_materials.cpp  erdyes_apply_materials.hpp  erdyes_colors.cpp  erdyes_colors.hpp  erdyes_config.cpp  erdyes_config.hpp  erdyes_dye_values.hpp  erdyes_local_player.cpp  erdyes_local_player.hpp  erdyes_messages.cpp  erdyes_messages.hpp  erdyes_messages_by_lang.cpp  erdyes_net_players.cpp  erdyes_net_players.hpp  erdyes_params.cpp  erdyes_params.hpp  erdyes_state.cpp  erdyes_state.hpp  erdyes_talkscript.cpp  erdyes_talkscript.hpp  talkscript_utils.hpp
src/from/: chr.hpp  menu_man.hpp  param_lookup.hpp  taskgroup.hpp
